change meta image url

--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
   <head>
     <meta charset="utf-8" />
+
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
+      prefix="og: http://ogp.me/ns#"
+      property="og:image"
+      content="https://user-images.githubusercontent.com/48270029/137388352-66477e14-64c3-4056-ac03-2a67973ee539.png"
+    />
+    <meta
+      prefix="og: http://ogp.me/ns#"
+      property="og:title"
+      content="Weather App"
+    />
+    <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta
+      prefix="og: http://ogp.me/ns#"
+      property="og:url"
+      content="https://weather-app-lk.netlify.app"
+    />
+    <meta prefix="og: http://ogp.me/ns#" property="og:type" content="Website" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
