change public description

--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,7 @@
       property="og:title"
       content="Weather App"
     />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Search for cities or countries . . ." />
     <meta
       prefix="og: http://ogp.me/ns#"
       property="og:url"
